--- a/treinamento-app/src/main/resources/application.properties
+++ b/treinamento-app/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=treinamento-service
 server.port=8080
 info.app.version=${version}
 spring.datasource.driverClassName = oracle.jdbc.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@10.11.101.33:1524:cartaotst
-spring.datasource.username = pdvm
-spring.datasource.password = pdvm
+spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/ORCLPDB1
+spring.datasource.username = treinamento
+spring.datasource.password = treinamento
 spring.datasource.connectionTimeout=3000
 spring.datasource.validationTimeout=2000
 spring.datasource.maximumPoolSize=5
