--- a/treinamento-app/src/main/resources/application.properties
+++ b/treinamento-app/src/main/resources/application.properties
@@ -5,6 +5,11 @@ spring.datasource.driverClassName = oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/ORCLPDB1
 spring.datasource.username = treinamento
 spring.datasource.password = treinamento
+
+#spring.datasource.url=jdbc:oracle:thin:@172.20.1.40:1521:tsft
+#spring.datasource.username = sft
+#spring.datasource.password = safetech
+
 spring.datasource.connectionTimeout=3000
 spring.datasource.validationTimeout=2000
 spring.datasource.maximumPoolSize=5
